--- a/farm/package.json
+++ b/farm/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.3.3",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-calendars": "^1.1294.0",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.3.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-vector-icons": "^9.2.0",
