--- a/farm/package.json
+++ b/farm/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.7.5",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "axios": "^1.3.3",
@@ -20,6 +21,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.3.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-vector-icons": "^9.2.0",
