--- a/farm/package.json
+++ b/farm/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^6.7.5",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "axios": "^1.3.3",
